syntax = "proto3";
package DomainServices.RealEstateValuationService;
option csharp_namespace = "DomainServices.RealEstateValuationService.Contracts";

message GetRealEstateValuationDetailRequest {
    int32 RealEstateValuationId = 1;
}